BJS2-44730 [Организация системы бронирования] Исправление замечаний